<resources>
    <string name="app_name">Discounted</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1021126774599790</string>

    <!--<string name="curr_loc">&#xe600;</string>-->
    <!--<string name="add_dust">&#xe601;</string>-->
    <!--<string name="back">&#xe602;</string>-->
    <!--<string name="check">&#xe603;</string>-->
    <!--<string name="cross">&#xe604;</string>-->
    <!--<string name="sweep">&#xe605;</string>-->
    <!--<string name="recy">&#xe606;</string>-->
    <!--<string name="filter">&#xe607;</string>-->
    <!--<string name="locat">&#xe608;</string>-->
    <!--<string name="map">&#xe609;</string>-->
    <!--<string name="search">&#xe60b;</string>-->
    <!--<string name="upload">&#xe60c;</string>-->


    <string name="ico_add">&#xe900;</string>
    <string name="ico_add_filled">&#xe901;</string>
    <string name="ico_arrow">&#xe902;</string>
    <string name="ico_arrow_dwn">&#xe903;</string>
    <string name="ico_card">&#xe904;</string>
    <string name="ico_cross">&#xe905;</string>
    <string name="ico_filter">&#xe906;</string>
    <string name="ico_home">&#xe907;</string>
    <string name="ico_info">&#xe908;</string>
    <string name="ico_locat">&#xe909;</string>
    <string name="ico_menu_drawer">&#xe90A;</string>
    <string name="ico_myorder">&#xe90c;</string>
    <string name="ico_next_ico">&#xe90d;</string>
    <string name="ico_notification">&#xe90e;</string>
    <string name="ico_offer">&#xe90f;</string>
    <string name="ico_proceed">&#xe910;</string>
    <string name="ico_qr_code">&#xe911;</string>
    <string name="ico_remove">&#xe912;</string>
    <string name="ico_resend_otp">&#xe913;</string>
    <string name="ico_setting">&#xe916;</string>
    <string name="ico_cart">&#xe917;</string>
    <string name="ico_">&#xe917;</string>
    <!--<string name="take_photo">&#xe911;</string>-->
    <string name="rating">&#xe918;</string>
    <string name="rupee">&#8377;</string>

    <string name="rating_points">&#xe918;12.0</string>





    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>

</resources>
