<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorAccent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Coconut Hair Oil"/>
            <co.jlabs.cersei_retailer.custom_components.TextView_Appcolor
                android:id="@+id/staricon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/ico_cross"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="350 gms"/>
        <LinearLayout
            android:paddingTop="8dp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="Rs 180"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:gravity="right">
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/ico_remove"/>
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="2"/>
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:background="#ffff"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/ico_add"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
        <co.jlabs.cersei_retailer.custom_components.TextView_Triangle
            android:layout_gravity="top"
            android:layout_width="58dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="9sp"
            android:text="@string/rating_points"/>
    </FrameLayout>
</LinearLayout>
