<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/roundbackground">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#ffffff"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="15% off on Maggi Noodles"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="Rs 180"/>
    <LinearLayout
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="40dp">
        <co.jlabs.cersei_retailer.custom_components.TextView_Black
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/ico_myorder"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:gravity="right">
            <co.jlabs.cersei_retailer.custom_components.TextView_Black
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/ico_remove"/>
            <TextView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="2"/>
            <co.jlabs.cersei_retailer.custom_components.TextView_Black
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:background="#ffff"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/ico_add"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="#888888"
        android:text="Description"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="#888888"
        android:text="Loream Dummy asdhjsak kjs dhf kaskf ksd fksa fh ksdhfksh kshh fkajs fkshh fkjja ssk dfkaskdfh as ks fksha fdhksh dfkshf skddhf kjjshfd ksh fks sf "/>
</LinearLayout>
</LinearLayout>