<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true" tools:openDrawer="start">

    <include layout="@layout/app_bar_dashboard" android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lay_prof"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                android:background="@drawable/side_nav_bar"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="15dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="horizontal"
                android:gravity="center">

                <!--android:paddingTop="?android:attr/actionBarSize"-->
                <!--android:paddingBottom="?android:attr/actionBarSize"-->

                <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/sym_def_app_icon" android:id="@+id/imageView" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="Pradeep Kumar"
                        android:textColor="@color/white"
                        android:padding="3dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:textColor="@color/white"
                        android:text="+917838310825" android:id="@+id/textView" />
                </LinearLayout>
                <co.jlabs.cersei_retailer.custom_components.TextView_White
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_next_ico"/>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lay_myorders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_selector"
                android:padding="@dimen/activity_horizontal_margin">
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_myorder"/>
                <TextView
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="My Orders"/>
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_next_ico"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_myaddresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_selector"
                android:padding="@dimen/activity_horizontal_margin">
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/rating"/>
                <TextView
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="My Addresses"/>
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_next_ico"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_savedcards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_selector"
                android:padding="@dimen/activity_horizontal_margin">
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_card"/>
                <TextView
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Saved Cards"/>
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_next_ico"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_coupons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_selector"
                android:padding="@dimen/activity_horizontal_margin">
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_offer"/>
                <TextView
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Coupons"/>
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_next_ico"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lay_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_selector"
                android:padding="@dimen/activity_horizontal_margin">
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_setting"/>
                <TextView
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Settings"/>
                <co.jlabs.cersei_retailer.custom_components.TextView_Black
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="@string/ico_next_ico"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
